Capa Web sin Refactoring terminada

--- a/Ventas/Ventas.Web/Views/Shared/_Layout.cshtml
+++ b/Ventas/Ventas.Web/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                         <a class="nav-link" aria-current="page" asp-area="" asp-controller="User" asp-action="Index">Users</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="" asp-action="">Sales</a>
+                        <a class="nav-link text-success" asp-area="" asp-controller="Sales" asp-action="Index">Sales</a>
                     </li>
                 </ul>
             </div>
