--- a/Ventas/Ventas.Web/Views/User/Index.cshtml
+++ b/Ventas/Ventas.Web/Views/User/Index.cshtml
@@ -1,18 +1,21 @@
-﻿@using Ventas.Web.Models.Responses;
+﻿@using Ventas.Web.Models.Requests;
+@using Ventas.Web.Models.Responses;
 @model List<Ventas.Web.Models.Responses.UserGetResponse>;
 @{
     ViewData["Title"] = "User Home Page";
     Layout = "_Layout_User";
 }
-<div class="col-3">
-<select class="form-select form-select-sm" aria-label="Small select example">
-    <option selected disabled>Filtrar por...</option>
-    <option value="date">Fecha</option>
-    <option value="role">Rol</option>
-    <option value="name">Nombre</option>
-</select>
-</div>
 
+<div class="col-3">
+    <form method="get" asp-controller="User" asp-action="Filter">
+        <select name="filterOption" class="form-select form-select-sm" onchange="this.form.submit()">
+            <option value="">Filtrar por...</option>
+            <option value="date" disabled>Fecha</option>
+            <option value="role">Rol</option>
+            <option value="name">Nombre</option>
+        </select>
+    </form>
+</div>
 <table class="table caption-top">
     <caption>List of users</caption>
     <thead class="bg-info text-light">
@@ -24,12 +27,14 @@
             <th scope="col">Actividad</th>
             <th scope="col">Creado</th>
             <th scope="col">Modificación</th>
+            <th scope="col">Modificación</th>
+            <th scope="col">Eliminar</th>
+           
         </tr>
     </thead>
     <tbody>
         @foreach(UserGetResponse userResponse in Model)
         {
-            @if(userResponse.Eliminado is null){
             <tr>
             <th scope="row">@userResponse.Id</th>
             <td>@userResponse.NombreCompleto</td>
@@ -63,8 +68,29 @@
                 else
                 {
                     <td>-</td>
-                }
-        </tr>}          
+                    }
+                <td>
+                    <form method="post" asp-controller="User" asp-action="Update">
+                        <input type="hidden" name="id" value="@userResponse.Id" />
+                        <input type="hidden" name="name" value="@userResponse.NombreCompleto" />
+                        <input type="hidden" name="email" value="@userResponse.Correo" />
+                        <input type="hidden" name="idRol" value="@userResponse.idRol" />
+                        <input type="hidden" name="activo" value=@userResponse.esActivo />
+                        <input type="hidden" name="clave" value="@userResponse.Clave" />
+                        <button type="submit" class="btn btn-outline-warning">Editar</button>
+                    </form>
+                </td>
+
+                    <td>
+                    <form method="post" asp-controller="User" asp-action="DeleteUser">
+                        <input type="hidden" name="id" value="@userResponse.Id" />
+                        <button type="submit" class="btn btn-outline-danger">Eliminar</button>
+                    </form>            
+                        </td>
+        </tr>
+                
+             
             }   
     </tbody>
 </table>
+
